--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Sensitive files
+/android/app/google-services.json
+/ios/GoogleService-Info.plist
+*.keystore
+*.jks
+secrets.json
